sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value While
  While(continue){
  ^AlgBubbleSort1:6: error: not found: value k
    var i:Int =k
               ^