sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n:Int = getNombreValeurs()
  var continue:Boolean = false
  While(continue){
    var i:Int =k
  	while(i<=n-1 || plusPetit(i+1,i)){
    	echange(i,i+1)
      continue = true
  	}
  }
}